# dwonboard

./: .env.example  .gitignore  Dockerfile  README.md  dw.json  dw.json~  pyproject.toml
.claude/: settings.local.json
app/: config.py  database.py  main.py
app/models/: __init__.py  alert.py  darkweb_item.py  embedding.py  organization.py  profile.py
app/routers/: alerts.py  auth.py  darkweb.py  organizations.py  profiles.py
app/schemas/: alert.py  darkweb.py  organization.py  profile.py
app/seed/: darkweb_fixtures.py
app/services/: #apa#  .#apa  alert_generator.py  cyber_risk.py  darkweb_ingest.py  onboarding.py  openai_client.py  profile_generator.py  recorded_future.py  vector_search.py
docs/: recorded-future-api-skills.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  auth.ts  exportPdf.ts  index.css
frontend/src/components/: AlertsView.tsx  Dashboard.tsx  IngestionChart.tsx  IntelCardView.tsx  Login.tsx  OnboardingWizard.tsx  ProfileView.tsx
scripts/: seed_darkweb.py
